<resources>
    <string name="app_name">Jogo da velha App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_game_fragment">Hello game fragment</string>
    <string name="placarJ1J2">PLACAR</string>
    <string name="Jogador1">%1$s </string>
    <string name="Jogador2">%1$s </string>
    <string name="Velha">Velha: %1$s</string>
    <string name="Placar1">0</string>
    <string name="Placar2">0</string>
    <string name="PlacarVelha">0</string>
    <string name="parabens">Parabens!! voce venceu!!</string>
    <string name="parabensV">Parabens velha!! voce venceu!!</string>
    <string name="resetar">Zerar o placar</string>
    <string name="tela_inicial">Voltar á tela inicial</string>
    <string name="preferencias">Preferências</string>
    <string name="Luzca_games">Luzca Games</string>
    <string name="Luzca_game_title">Jogo da Velha</string>
    <string name="Luzca_game_buuton">Começar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>